--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -11,14 +11,15 @@
         android:layout_width="273dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="Book Title"
+        android:hint="@string/book_title"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/author"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.816" />
+        app:layout_constraintVertical_bias="0.816"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/author"
@@ -26,39 +27,42 @@
         android:layout_height="49dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
-        android:hint="Author Name"
+        android:hint="@string/author_name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/pages"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.948" />
+        app:layout_constraintVertical_bias="0.948"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/pages"
         android:layout_width="273dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="Pages"
+        android:hint="@string/pages"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.411" />
+        app:layout_constraintVertical_bias="0.411"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="53dp"
         android:layout_marginTop="72dp"
-        android:text="Add"
+        android:text="@string/add"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pages" />
+        app:layout_constraintTop_toBottomOf="@+id/pages"
+        tools:ignore="TextViewEdits" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
