--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="1"
+        android:text="@string/_1"
         android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:text="Title1"
+        android:text="@string/title1"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#000"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="Author1"
+        android:text="@string/author1"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#000"
