--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:text="TextView"
+        android:text="@string/textview"
         android:textSize="18sp"
         android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
