--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -7,13 +7,13 @@
     tools:context=".AddActivity">
 
     <EditText
-        android:id="@+id/title"
+        android:id="@+id/StudentName"
         android:layout_width="273dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="@string/book_title"
+        android:hint="@string/student_name"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/author"
+        app:layout_constraintBottom_toTopOf="@+id/Sabak"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,14 +22,14 @@
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/author"
+        android:id="@+id/Sabak"
         android:layout_width="273dp"
         android:layout_height="49dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
-        android:hint="@string/author_name"
+        android:hint="@string/Sabaq"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/pages"
+        app:layout_constraintBottom_toTopOf="@+id/Subki"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,11 +38,11 @@
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/pages"
+        android:id="@+id/Subki"
         android:layout_width="273dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="@string/pages"
+        android:hint="@string/Sabqi"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pages"
+        app:layout_constraintTop_toBottomOf="@+id/Subki"
         tools:ignore="TextViewEdits" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
