--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -7,13 +7,13 @@
     tools:context=".UpdateActivity">
 
     <EditText
-        android:id="@+id/title2"
+        android:id="@+id/name2"
         android:layout_width="273dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="@string/book"
+        android:hint="@string/student"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/author2"
+        app:layout_constraintBottom_toTopOf="@+id/sabaq2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,14 +21,14 @@
         app:layout_constraintVertical_bias="0.816" />
 
     <EditText
-        android:id="@+id/author2"
+        android:id="@+id/sabaq2"
         android:layout_width="273dp"
         android:layout_height="49dp"
         android:layout_marginBottom="16dp"
         android:ems="10"
-        android:hint="@string/author"
+        android:hint="@string/sabaq_name"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/pages2"
+        app:layout_constraintBottom_toTopOf="@+id/sabqi2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         app:layout_constraintVertical_bias="0.948" />
 
     <EditText
-        android:id="@+id/pages2"
+        android:id="@+id/sabqi2"
         android:layout_width="273dp"
         android:layout_height="49dp"
         android:ems="10"
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pages2" />
+        app:layout_constraintTop_toBottomOf="@+id/sabqi2" />
 
     <Button
         android:id="@+id/button3"
