--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/book_id_text"
+        android:id="@+id/std_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -33,31 +33,31 @@
         app:layout_constraintVertical_bias="0.507" />
 
     <TextView
-        android:id="@+id/book_title"
+        android:id="@+id/sname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:text="@string/title1"
+        android:text="@string/name1"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#000"
-        app:layout_constraintStart_toEndOf="@+id/book_id_text"
-        app:layout_constraintTop_toTopOf="@+id/book_id_text" />
+        app:layout_constraintStart_toEndOf="@+id/std_id"
+        app:layout_constraintTop_toTopOf="@+id/std_id" />
 
     <TextView
-        android:id="@+id/book_author"
+        android:id="@+id/ssabaq"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="@string/author1"
+        android:text="@string/Sabaq"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#000"
-        app:layout_constraintStart_toStartOf="@+id/book_title"
-        app:layout_constraintTop_toBottomOf="@+id/book_title" />
+        app:layout_constraintStart_toStartOf="@+id/sname"
+        app:layout_constraintTop_toBottomOf="@+id/sname" />
 
     <TextView
-        android:id="@+id/book_pages"
+        android:id="@+id/ssubqi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
